--- a/BrunusBurguer/BrunusBurguer/Views/_ViewImports.cshtml
+++ b/BrunusBurguer/BrunusBurguer/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using BrunusBurguer.Models
 @using BrunusBurguer.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper BrunusBurguer.TagHelpers.*, BrunusBurguer
